--- a/comu/src/main/resources/templates/boardList.html
+++ b/comu/src/main/resources/templates/boardList.html
@@ -12,13 +12,14 @@
     </div>
 
     <div class="container">
+        <button type="button" id="create-btn" th:onclick="|location.href='@{/newboard}'|" class="btn btn-secondary btn-sm mb-3">글 등록</button>
         <div class="row-6" th:each="item : ${boards}">
             <div class="card">
                 <div class="card-header" th:text="${item.no}"></div>
                 <div class="card-body">
                     <h5 class="card-title" th:text="${item.title}"></h5>
                     <p class="card-text" th:text="${item.content}"></p>
-                    <a th:href="@{/board/{id}(id=${item.id})}" class="btn btn-primary">보러가기</a>
+                    <a th:href="@{/board/{no}(no=${item.no})}" class="btn btn-primary">보러가기</a>
                 </div>
             </div>
         </div>
