--- a/comu/src/main/resources/templates/boardList.html
+++ b/comu/src/main/resources/templates/boardList.html
@@ -23,6 +23,10 @@
                 </div>
             </div>
         </div>
+
+        <button type="button" class="btn btn-secondary" onclick="location.href='/logout'">로그아웃</button>
     </div>
+
+<script src="/js/board.js"></script>
 </body>
 </html>
