--- a/black-dashboard-react-master/src/assets/css/black-dashboard-react.css
+++ b/black-dashboard-react-master/src/assets/css/black-dashboard-react.css
@@ -18692,7 +18692,7 @@ fieldset[disabled] .form-control {
 textarea.form-control {
   max-width: 100%;
   max-height: 80px;
-  padding: 10px 10px 0 0;
+  padding: 10px 10px 10px 10px;
   resize: none;
   line-height: 2;
 }
